# js2-gateway

./: .gitignore  Dockerfile  Makefile  README.md  debug.md  docker-compose.dev.yml  stack.yml
.github/workflows/: docker-publish.yml
backend/: .gitignore  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/routes/: auth.py  auth_me.py  minerals.py  user.py
backend/app/routes/co2/: co2_calc.py  main
backend/app/routes/h2s/: Block1.csv  h2s_calc.py
backend/app/routes/h2s/resources/: Block2.csv  Block3.csv
backend/app/routes/phreeqc/: phreeqc_calc.py  process_manager.py
backend/app/routes/rate/: rate_calc.py
backend/app/routes/supcrtbl/: JobLockFile.py  supcrtbl_calc.py  supcrtbl_process.py
backend/app/routes/supcrtbl/supcrtfiles/: supcrtbl
backend/app/services/: auth_utils.py  email_service.py
frontend/: package-lock.json  package.json  rsbuild.config.mjs
frontend/scripts/: Block1.csv  Block2.csv  Block3.csv  convert-csv-to-js.js  purgecss-report.js
frontend/src/: App.jsx  AuthContext.jsx  Layout.jsx  ScrollToTopOfPage.jsx  config.js  constants.js  index.jsx
frontend/src/components/: Alert.jsx  Disclaimer.jsx  FileInput.jsx  RadioGroup.jsx  ScrollToTopOfPage.jsx  Select.jsx  SelectInput.tsx  approval_required.jsx  blank.jsx  footer.jsx  home_notification_toast.jsx  login_required.jsx  navbar.jsx  onboarding_check.jsx  onboarding_required.jsx  pending_user.jsx  user_button.jsx
frontend/src/pages/: AdminPage.jsx  Home.jsx  NotFound.jsx  Onboarding.jsx  RateScripts.jsx
(+27 files in other folders)
