[project]
name = "backend"
version = "0.1.0"
description = "Backend for Geochem Gateway"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
    "requests>=2.32.3",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.3",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "emails>=0.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]
indent-width = 2

[tool.ruff.format]
quote-style="double"
indent-style="space"
line-ending="lf"